# rust-lox

./: .gitignore  Cargo.toml  README.md  ex3.txt  ex4.txt
src/: codecrafters.rs  error.rs  interpreter.rs  lex.rs  main.rs  parser.rs  token.rs
tests/resources/: bad.lox  ex11.lox  ex15.lox  ex16.lox  ex9.lox
