[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
thiserror = "1.0.38"                             # error handling
