[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
bytes = "1.7.2"                                  # helps manage buffers
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.64"                             # error handling
